update Admin, CSS, back arrows, correct outline on mobile and header

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 
 html, body {
   transition: scroll-behavior 0.3s ease-in-out;
