--- a/src/components/Admin/CategoriesAdmin/CategoriesAdmin.css
+++ b/src/components/Admin/CategoriesAdmin/CategoriesAdmin.css
@@ -1,4 +1,4 @@
-.admin-container {
+/* .admin-container {
     height: 100vh;
     width: 100vw;
     background-color: black;
@@ -26,4 +26,4 @@
     background-color: rgb(187, 187, 187);
     color: rgb(43, 43, 43);
     transform: scale(105%);
-}
+} */
